test/built-ins/Error/prototype/stack/getter-not-a-constructor.js
// Copyright (C) 2026 Jordan Harband. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: sec-get-error.prototype.stack
description: >
  get Error.prototype.stack does not implement [[Construct]], is not new-able
info: |
  ECMAScript Function Objects

  Built-in function objects that are not identified as constructors do not
  implement the [[Construct]] internal method unless otherwise specified in
  the description of a particular function.
includes: [isConstructor.js]
features: [error-stack-accessor, Reflect.construct]
---*/

var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

assert.sameValue(
  isConstructor(get),
  false,
  'isConstructor(get Error.prototype.stack) must return false'
);

assert.throws(TypeError, function () {
  new get();
});
